fix: fixed button spacing issues

--- a/client/styles/css/home-styles.css
+++ b/client/styles/css/home-styles.css
@@ -32,6 +32,7 @@
 	display: flex;
 	width: 100%;
 	height: 5%; /* goes in conjunction with the inline-flexed-container to combine for 100% */
+	min-height: 30px;
 	justify-content: space-between;
 	align-items: center;
 	font-size: 24px;
@@ -56,8 +57,18 @@
 	font-weight: 800;
 }
 
+.rmv-margin {
+	margin-right: 0;
+}
+
 .status-icon-center {
 	justify-content: center;
+}
+
+div.basic:nth-child(1),
+div.basic:nth-child(2),
+div.basic:nth-child(3) {
+	margin-right: 0px;
 }
 
 @media only screen and (max-height: 745px) {
